modifier_couleur_taille

--- a/themes/default/view/default/cmap.phtml
+++ b/themes/default/view/default/cmap.phtml
@@ -28,6 +28,10 @@ $user = $this->identity();
         scrollbar-width: thin;
         overflow-x: auto;
     }
+
+    .tbClass{
+        font-size: 12px;
+    }
 </style>
 
 <div>
