--- a/themes/default/view/omeka/site/page/show.phtml
+++ b/themes/default/view/omeka/site/page/show.phtml
@@ -1,4 +1,4 @@
 <?php
-echo $this->partial('default/'.$page->slug(), []);
+echo $this->partial('default/'.$page->slug(), ['site'=>$site]);
 return ;
 ?>
