--- a/themes/default/view/layout/layout.phtml
+++ b/themes/default/view/layout/layout.phtml
@@ -17,10 +17,12 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/iconfonts.css', 'Omeka
 $this->headLink()->prependStylesheet('//fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700italic,700');
 $this->headScript()->prependFile($this->assetUrl('js/default.js'));
 $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
-$this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka'));
+//$this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka'));
 $this->headScript()->prependFile($this->assetUrl('js/d3.v5.min.js'));
 $this->headScript()->prependFile($this->assetUrl('js/cmap.js'));
 $this->headScript()->prependFile($this->assetUrl('js/bootstrap.min.js'));
+$this->headScript()->prependFile($this->assetUrl('js/modernizr.js'));
+$this->headScript()->prependFile($this->assetUrl('js/jquery.min.js'));
 $this->jsTranslate();
 $this->trigger('view.layout');
 $userBar = $this->userBar();
