--- a/themes/default/view/default/cmap.phtml
+++ b/themes/default/view/default/cmap.phtml
@@ -1,6 +1,7 @@
 <?php
 $cmap = $this->cmap('');
 $user = $this->identity();
+$path_img_loading = "/themes/default/img/loading.gif";
 ?>
 
 <script>
@@ -30,12 +31,12 @@ $user = $this->identity();
     .js #loader { display: block; position: absolute; left: 100px; top: 0; }
     .se-pre-con {
         position: fixed;
-        left: 0px;
-        top: 0px;
-        width: 100%;
-        height: 100%;
+        left: 600px;
+        top: 150px;
+        width: 10%;
+        height: 10%;
         z-index: 9999;
-        background: url("/themes/default/img/loading.gif") center no-repeat #fff;
+        background: url(<?= $path_img_loading ?>) center no-repeat #fff;
     }
 
     .table-foot-btn{
