--- a/themes/default/view/layout/layout.phtml
+++ b/themes/default/view/layout/layout.phtml
@@ -23,6 +23,7 @@ $this->headScript()->prependFile($this->assetUrl('js/cmap.js'));
 $this->headScript()->prependFile($this->assetUrl('js/bootstrap.min.js'));
 $this->headScript()->prependFile($this->assetUrl('js/modernizr.js'));
 $this->headScript()->prependFile($this->assetUrl('js/jquery.min.js'));
+$this->headScript()->prependFile($this->assetUrl('js/d3-color-axis.js'));
 $this->jsTranslate();
 $this->trigger('view.layout');
 $userBar = $this->userBar();
