--- a/themes/default/view/default/cmap.phtml
+++ b/themes/default/view/default/cmap.phtml
@@ -7,10 +7,12 @@ $user_id = isset($user) && $user->getId() > 0 ? $user->getId() : 0;
 
 <script>
     // Wait for window load
+    
     $(window).load(function() {
         // Animate loader off screen
         $(".se-pre-con").fadeOut("slow");
     });
+     
 
     let tables =  <?php echo json_encode($cmap['tables']); ?>
 
@@ -19,10 +21,14 @@ $user_id = isset($user) && $user->getId() > 0 ? $user->getId() : 0;
     let site_url = "<?php echo $site->url(); ?>"
 
     let user_id = "<?php echo $user_id; ?>"
+    
+    
+    
 </script>
 <style>
     /* This only works with JavaScript,
     if it's not present, don't show loader */
+    
     .no-js #loader { display: none;  }
     .js #loader { display: block; position: absolute; left: 100px; top: 0; }
     .se-pre-con {
@@ -33,8 +39,8 @@ $user_id = isset($user) && $user->getId() > 0 ? $user->getId() : 0;
         height: 10%;
         z-index: 9999;
         background: url(<?= $path_img_loading ?>) center no-repeat #fff;
-    }
-
+    }   
+    
     .table-foot-btn{
         fill:blue;
         font-size: 12px;
@@ -54,6 +60,15 @@ $user_id = isset($user) && $user->getId() > 0 ? $user->getId() : 0;
 
     .tbClass{
         font-size: 12px;
+    }
+</style>
+<style type="text/css">
+    .scroller {
+        overflow-y:auto;
+        height:auto;
+        max-height:200px;
+        scrollbar-width: thin;
+        overflow-x: hidden;
     }
 </style>
 
@@ -107,4 +122,29 @@ $user_id = isset($user) && $user->getId() > 0 ? $user->getId() : 0;
         color: d3.scaleSequential([0, tables[0].max_nb_links], d3.interpolate("brown", "blue")),
         title: "Relations"
     })
+    
+    function onLoad(loading, loaded) {
+        if(document.readyState === 'complete'){
+            return loaded();
+        }
+        loading();
+        if (window.addEventListener) {
+            window.addEventListener('load', loaded, false);
+        }
+        else if (window.attachEvent) {
+            window.attachEvent('onload', loaded);
+        }
+    };
+
+    onLoad(function(){
+       //alert('I am waiting for the page to be loaded');
+        var str_title = 'Notification';
+        var str_content = "Merci de patienter pour le chargement des données";
+
+        c.show_model(str_title, str_content);
+    },
+    function(){
+        //alert('The page is loaded');
+        c.hide_model('postModal');
+    });
 </script>
